--- a/public/css/topbar.css
+++ b/public/css/topbar.css
@@ -65,7 +65,6 @@
   min-width: 180px;
   max-width: 270px;
   width: 270px;
-  outline: none;
 }
 .topbar-model-select:hover,
 .topbar-model-select:focus {
